@@ -1,7 +1,9 @@
 package no.nav.dolly.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import ma.glasnost.orika.MapperFacade;
+import no.nav.dolly.bestilling.pdldata.PdlDataConsumer;
 import no.nav.dolly.domain.dto.TestidentDTO;
 import no.nav.dolly.domain.jpa.Bruker;
 import no.nav.dolly.domain.jpa.Testgruppe;
@@ -33,6 +35,7 @@ import static no.nav.dolly.util.CurrentAuthentication.getUserId;
 import static org.apache.commons.lang3.BooleanUtils.isTrue;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class TestgruppeService {
@@ -45,6 +48,7 @@ public class TestgruppeService {
     private final BestillingService bestillingService;
     private final PersonService personService;
     private final GetUserInfo getUserInfo;
+    private final PdlDataConsumer pdlDataConsumer;
 
     public Testgruppe opprettTestgruppe(RsOpprettEndreTestgruppe rsTestgruppe) {
         Bruker bruker = brukerService.fetchBruker(getUserId(getUserInfo));
@@ -114,7 +118,7 @@ public class TestgruppeService {
         try {
             return testgrupper.stream()
                     .map(testgruppeRepository::save)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (DataIntegrityViolationException e) {
             throw new ConstraintViolationException("En Testgruppe DB constraint er brutt! Kan ikke lagre testgruppe. Error: " + e.getMessage(), e);
         } catch (NonTransientDataAccessException e) {
@@ -172,12 +176,7 @@ public class TestgruppeService {
 
         var testgruppe = fetchTestgruppeById(gruppeId);
         identService.saveIdentTilGruppe(ident, testgruppe, master, null);
-    }
-
-    public void slettIdent(Long gruppeId, String ident) {
-
-        fetchTestgruppeById(gruppeId);
-        identService.getTestIdent(ident);
-        identService.slettTestident(ident);
+        pdlDataConsumer.putStandalone(ident, true)
+                .subscribe(response -> log.info("Lagt til ident {} som standalone i PDL-forvalter", ident));
     }
 }
