@@ -5,7 +5,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import no.nav.registre.sdforvalter.database.model.KrrModel;
 import no.nav.registre.sdforvalter.database.repository.KrrRepository;
@@ -29,7 +28,7 @@ public class KrrAdapter extends FasteDataAdapter {
     public KrrListe fetchBy(String gruppe) {
         log.info("Henter krrdata med gruppe {}", gruppe);
         List<KrrModel> krrModels = repository.findByGruppeModel(getGruppe(gruppe));
-        List<Krr> liste = krrModels.stream().map(Krr::new).collect(Collectors.toList());
+        List<Krr> liste = krrModels.stream().map(Krr::new).toList();
 
         log.info("Fant {} krr-personer fra gruppe {}", liste.size(), gruppe);
         return new KrrListe(liste);
@@ -43,7 +42,7 @@ public class KrrAdapter extends FasteDataAdapter {
         return new KrrListe(repository.saveAll(list
                 .stream()
                 .map(item -> new KrrModel(item, getOppinnelse(item), getGruppe(item)))
-                .collect(Collectors.toList()))
+                .toList())
         );
     }
 
