@@ -7,7 +7,6 @@ import lombok.Setter;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -21,7 +20,7 @@ public class SkdResponse {
     private List<Long> tpsfIds;
 
     public List<String> getFailedStatus() {
-        return statusFraFeilendeMeldinger.parallelStream().map(StatusPaaAvspiltSkdMelding::toString).collect(Collectors.toList());
+        return statusFraFeilendeMeldinger.parallelStream().map(StatusPaaAvspiltSkdMelding::toString).toList();
     }
 
 }
